[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/icon/building_icon/archer_tower_icon.png" type="Texture" id=2]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/icon/building_icon/building_icon.gd" type="Script" id=5]

[node name="building_icon" type="MarginContainer"]
margin_right = 85.0
margin_bottom = 160.0
rect_min_size = Vector2( 85, 160 )
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
margin_right = 85.0
margin_bottom = 160.0
mouse_filter = 2

[node name="Frame2" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_right = 85.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer2"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 112.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_right = 1.0
margin_bottom = 107.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 5.0
margin_right = 80.0
margin_bottom = 107.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 84.0
margin_right = 85.0
margin_bottom = 107.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_top = 116.0
margin_right = 85.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="Control" type="Control" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 85.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer2/MarginContainer2/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.643137 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 85.0
margin_bottom = 44.0
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_right = 85.0
margin_bottom = 35.0
grow_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Archer Tower"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 39.0
margin_right = 85.0
margin_bottom = 44.0
rect_min_size = Vector2( 5, 5 )

[node name="input_detection" parent="." instance=ExtResource( 3 )]

[connection signal="gui_input" from="." to="." method="_on_building_icon_gui_input"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
